RESOLVED FIXED184901
[Extra zoom mode] REGRESSION(230860) Unable to change time input values using UI
https://bugs.webkit.org/show_bug.cgi?id=184901
Summary [Extra zoom mode] REGRESSION(230860) Unable to change time input values using UI
Wenson Hsieh
Reported 2018-04-23 16:04:49 PDT
Subject says it all.
Attachments
Patch (14.67 KB, patch)
2018-04-23 16:41 PDT, Wenson Hsieh
no flags
Radar WebKit Bug Importer
Comment 1 2018-04-23 16:05:52 PDT
Wenson Hsieh
Comment 2 2018-04-23 16:41:11 PDT
WebKit Commit Bot
Comment 3 2018-04-23 19:45:37 PDT
Comment on attachment 338618 [details] Patch Clearing flags on attachment: 338618 Committed r230941: <https://trac.webkit.org/changeset/230941>
WebKit Commit Bot
Comment 4 2018-04-23 19:45:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.