Tools/DumpRenderTree/ios/UIScriptControllerIOS.mm
@@ -159,6 +159,10 @@ void UIScriptController::dismissFormAccessoryView()
 {
 }
 
+void UIScriptController::setTimePickerValue(long, long)
+{
+}
+
 void UIScriptController::selectFormAccessoryPickerRow(long rowIndex)
 {
 }
