Tools/TestRunnerShared/UIScriptContext/UIScriptController.cpp
@@ -298,6 +298,10 @@ void UIScriptController::dismissFormAccessoryView()
 {
 }
 
+void UIScriptController::setTimePickerValue(long, long)
+{
+}
+
 void UIScriptController::selectFormAccessoryPickerRow(long)
 {
 }
