Tools/WebKitTestRunner/ios/UIScriptControllerIOS.mm
@@ -436,6 +436,12 @@ void UIScriptController::selectFormAccessoryPickerRow(long rowIndex)
     TestRunnerWKWebView *webView = TestController::singleton().mainWebView()->platformView();
     [webView selectFormAccessoryPickerRow:rowIndex];
 }
+
+void UIScriptController::setTimePickerValue(long hour, long minute)
+{
+    TestRunnerWKWebView *webView = TestController::singleton().mainWebView()->platformView();
+    [webView setTimePickerValueToHour:hour minute:minute];
+}
     
 JSObjectRef UIScriptController::contentsOfUserInterfaceItem(JSStringRef interfaceItem) const
 {
